<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Represents a maintenance log entry in list view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/logItemContainer"
        android:paddingTop="3dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logItemLabel"
            android:text="@string/log_item_label"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logItemNumber"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text=""/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/discrepancyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/discrepancyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/discrepancy_label"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/discrepancy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:ellipsize="end"
                android:lines="2"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/corrActionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/corrActionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/corr_action_label"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/corrAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:ellipsize="end"
                android:lines="2"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>